# gene-benchmark

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.MD  pre-commit-config.yaml  pyproject.toml
.github/workflows/: pre-commit-check.yml  python-package.yml
gene_benchmark/: README.MD  __init__.py  descriptor.py  deserialization.py  encoder.py  task_retrieval.py  tasks.py
gene_benchmark/tests/: __init__.py  test_descriptor.py  test_encoder.py  test_task_retrieval.py  test_tasks.py
gene_benchmark/tests/resources/: csv2prompt.csv  disease_descriptions.csv  disease_descriptions_mod.csv  file_embed_test.csv
gene_benchmark/tests/resources/tasks/Gene Type Test/: entities.csv  outcomes.csv
gene_benchmark/tests/resources/tasks/imbalanced_cat/: entities.csv  outcomes.csv
gene_benchmark/tests/resources/tasks/interaction/: entities.csv  outcomes.csv
gene_benchmark/tests/resources/tasks/multi_label/: entities.csv  outcomes.csv
gene_benchmark/tests/resources/tasks/simple_cat/: entities.csv  (+1 more)
manuscript/: How to reproduce.md  embeddings_creation.md  gene_set.yaml
manuscript/models/: BGW.yaml  DNABERT2.yaml  DNABERT2_pre.yaml  ESM2.yaml  Gene2Vec.yaml  Geneformer.yaml  MPNet.yaml  MTEB-L.yaml  MTEB-S.yaml  ScGPT-B.yaml  ScGPT-H.yaml  cellPLM.yaml
notebooks/: Granite_for_gene_properties.ipynb  How to example.ipynb  cllpt_extract_embeddings.ipynb  create_long_format_results.ipynb  task_excel_to_latex_tables.ipynb  umap.ipynb
notebooks/granite_files/: granite2b.yaml  granite8b.yaml  granite_embed.yaml
scripts/: extract_gene_text_descriptions.py  extract_gene_text_embeddings.py  run_task.py  utils.py
scripts/data_retrieval/: disease_prompt.py  gene_disease_association.py
scripts/encodings/: extract_scGPT_encdoing.py
scripts/encodings_retrieval/: extract_bag_of_words_encodings.py  extract_cellPLM_encodings.py  extract_gene2vec_encodings.py  extract_geneformer_encodings.py
scripts/encodings_retrival/: extract_bag_of_words_encodings.py  extract_cellPLM_encodings.py  extract_gene2vec_encodings.py  extract_geneformer_encodings.py  extract_scGPT_encdoing.py  extract_scGPT_encodings.py
scripts/models/: PreComputedEncoder.yaml  genedisease_precom.yaml
scripts/task_configs/: binary_tasks.yaml  categorical_tasks.yaml  derived_binary_tasks.yaml  multi_label_tasks.yaml
scripts/tasks_retrieval/: Genecorpus_tasks_creation.py  HLA_task_creation.py  HPA_tasks_creation.py  Reactome_tasks_creation.py  Reactome_tasks_creation_full_set.py  gene2gene_task_creation.py  gene_disease_association_task_creation.py  humantfs_task_creation.py  task_retrieval.py  uniprot_keyword_tasks_creation.py
scripts/tasks_retrival/: Genecorpus_tasks_creation.py  HLA_task_creation.py  HPA_tasks_creation.py  Reactome_tasks_creation.py  Reactome_tasks_creation_full_set.py  gene2gene_task_creation.py  gene_disease_association_task_creation.py  hpa_column_names_for_tasks.yaml  humantfs_task_creation.py  task_retrieval.py  task_retrival.py
tasks/: README.MD  task_descriptions.xlsx
(+8 files in other folders)
